; ModuleID = '/home/carl/AnghaBench/libsodium/src/libsodium/randombytes/extr_randombytes.c_randombytes_stir.c'
source_filename = "/home/carl/AnghaBench/libsodium/src/libsodium/randombytes/extr_randombytes.c_randombytes_stir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (...)* }

@implementation = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @randombytes_stir() #0 {
  %1 = call i32 (...) @randombytes_init_if_needed()
  %2 = load %struct.TYPE_2__*, %struct.TYPE_2__** @implementation, align 8
  %3 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %2, i32 0, i32 0
  %4 = load i32 (...)*, i32 (...)** %3, align 8
  %5 = icmp ne i32 (...)* %4, null
  br i1 %5, label %6, label %11

6:                                                ; preds = %0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @implementation, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32 (...)*, i32 (...)** %8, align 8
  %10 = call i32 (...) %9()
  br label %11

11:                                               ; preds = %6, %0
  ret void
}

declare dso_local i32 @randombytes_init_if_needed(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
